--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/start/start.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://components/chat/chat.gd", "res://states/lobby/lobby.gd", "res://components/escape_menu/lobby/lobby_escape_menu.gd", "res://autoloads/signals.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://states/lobby/lobby.gd"
+selected_script="res://states/start/start.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
