--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/")
+dock_filesystem_selected_paths=PackedStringArray("res://states/start/start.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://states/start/start.tscn", "res://components/escape_menu/lobby/lobby_escape_menu.tscn")
-current_scene="res://states/start/start.tscn"
+open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://states/start/start.tscn", "res://states/authentication/authentication.tscn")
+current_scene="res://states/authentication/authentication.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://components/chat/chat.gd", "res://states/lobby/lobby.gd", "res://components/escape_menu/lobby/lobby_escape_menu.gd", "res://autoloads/signals.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
-selected_script="res://states/start/start.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://states/lobby/lobby.gd"]
+selected_script="res://states/authentication/authentication.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
@@ -47,3 +47,13 @@ open_shaders=["res://assets/shaders/blur.gdshader"]
 split_offset=0
 selected_shader="res://assets/shaders/blur.gdshader"
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=false
+log_filter_4=true
+collapse=false
+show_search=true
