--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://states/lobby/lobby.tscn", "res://states/start/start.tscn", "res://states/authentication/authentication.tscn")
-current_scene="res://states/authentication/authentication.tscn"
+current_scene="res://states/start/start.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://states/lobby/lobby.gd"]
-selected_script="res://states/authentication/authentication.gd"
+open_scripts=["res://states/authentication/authentication.gd", "res://states/lobby/lobby.gd", "res://autoloads/websocket.gd"]
+selected_script="res://autoloads/websocket.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
