--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,14 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
+  "version": "0.0.0.4",
   "configurations": [
     {
       "name": "Run server",
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/server/cmd/main.go",
+      "program": "${workspaceFolder}/server/main.go",
       "output": "${workspaceFolder}/server/cmd/debug_executable.exe",
     }
   ]
