--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -1,8 +1,8 @@
 [docks]
 
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=1
-dock_5_selected_tab_idx=1
+dock_4_selected_tab_idx=0
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/start/start.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://components/chat/chat.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://states/start/start.tscn", "res://states/authentication/authentication.tscn", "res://states/lobby/lobby.tscn")
 current_scene="res://states/lobby/lobby.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
