--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -1,7 +1,7 @@
 [docks]
 
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=1
+dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://components/chat/chat.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://states/authentication/authentication.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/authentication/authentication.gd", "res://states/lobby/lobby.gd", "res://autoloads/websocket.gd"]
+open_scripts=["res://states/lobby/lobby.gd", "res://autoloads/websocket.gd"]
 selected_script="res://states/lobby/lobby.gd"
 open_help=[]
 script_split_offset=112
