--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/authentication/authentication.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/message/", "res://autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://classes/message/message.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/start/", "res://states/lobby/", "res://states/authentication/", "res://components/", "res://components/escape_menu/", "res://components/escape_menu/lobby/", "res://components/chat/", "res://classes/", "res://classes/message/", "res://autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
@@ -28,13 +28,13 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://states/start/start.tscn", "res://states/authentication/authentication.tscn", "res://states/lobby/lobby.tscn")
 current_scene="res://states/lobby/lobby.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://states/lobby/lobby.gd", "res://autoloads/websocket.gd"]
+open_scripts=["res://states/authentication/authentication.gd", "res://components/chat/chat.gd", "res://autoloads/game_manager.gd", "res://states/lobby/lobby.gd", "res://classes/message/message.gd", "res://states/start/start.gd", "res://autoloads/websocket.gd"]
 selected_script="res://states/lobby/lobby.gd"
 open_help=[]
 script_split_offset=112
