--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 63,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 30,
-"scroll_position": 21.0,
+"row": 148,
+"scroll_position": 134.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 77,
-"scroll_position": 0.0,
+"scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,12 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
-"selection": false,
+"row": 25,
+"scroll_position": 18.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 25,
+"selection_to_column": 58,
+"selection_to_line": 26,
 "syntax_highlighter": "GDScript"
 }
 
@@ -175,11 +179,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 7,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 26,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -194,6 +198,20 @@ state={
 "h_scroll_position": 0,
 "row": 50,
 "scroll_position": 38.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://components/browser/browser.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 73,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 29,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
