--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=284
-dock_hsplit_3=-227
+dock_hsplit_3=-218
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://states/game/game.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://states/", "res://states/game/", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://assets/textures/prototype/")
+dock_filesystem_selected_paths=PackedStringArray("res://packets.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objects/", "res://objects/character/", "res://maps/prototype/", "res://components/escape_menu/game/", "res://components/chat/", "res://classes/message/", "res://autoloads/", "res://assets/textures/prototype/")
 dock_3="Scene,Import"
 dock_4="FileSystem,Godobuf"
 dock_5="Inspector,Node,History"
@@ -28,24 +28,24 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn")
 current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-192
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_default_debugger_tab_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://objects/character/character.gd", "res://components/chat/chat.gd", "res://states/game/game.gd"]
-selected_script="res://objects/character/character.gd"
+open_scripts=["res://objects/character/character.gd", "res://states/game/game.gd"]
+selected_script="res://states/game/game.gd"
 open_help=[]
-script_split_offset=117
+script_split_offset=112
 list_split_offset=75
 zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://assets/shaders/blur.gdshader", "res://assets/shaders/forground_shader.gdshader", "res://assets/shaders/forground_shader_2.gdshader"]
+open_shaders=["res://assets/shaders/blur.gdshader"]
 split_offset=0
-selected_shader="res://assets/shaders/forground_shader.gdshader"
+selected_shader="res://assets/shaders/blur.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
