--- a/client/.godot/editor/script_editor_cache.cfg
+++ b/client/.godot/editor/script_editor_cache.cfg
@@ -6,7 +6,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 21,
-"selection_to_column": 16,
-"selection_to_line": 21,
+"row": 10,
+"scroll_position": 2.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -165,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 211,
-"scroll_position": 0.0,
+"row": 231,
+"scroll_position": 215.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
