--- a/client/.godot/editor/editor_layout.cfg
+++ b/client/.godot/editor/editor_layout.cfg
@@ -29,13 +29,13 @@ open_scenes=PackedStringArray("res://maps/prototype/prototype.tscn", "res://obje
 current_scene="res://maps/prototype/prototype.tscn"
 center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://states/game/game.gd", "res://objects/character/player/player.gd", "res://autoloads/utils.gd"]
-selected_script="res://states/game/game.gd"
+selected_script="res://objects/character/player/player.gd"
 open_help=[]
 script_split_offset=112
 list_split_offset=75
